discussion/kv_engine/125919/125919_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Use PointInTime backup for every min 24h

Change-Id: I0f1b686ff8190d087bba3630b371ca346985a35c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-16 14:18:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-16 15:24:58.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27533/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27533/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1717/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1091:13: error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
            oldest.time_since_epoch().count(),
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1205:1: note: "compact" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1717/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1091:13:
error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1717/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23543/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1091:13:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23543/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3130/ : FAILURE

Compile error at [2020-04-16T15:20:14.832Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3130/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3146/ : FAILURE

Compile error at [2020-04-16T15:21:18.883Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3146/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3200/ : FAILURE

Compile error at [2020-04-16T15:22:58.055Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3200/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10997/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2189/ : FAILURE

Compile error at [2020-04-16T14:39:05.999Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1091:13:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2189/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/236/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
